[project]
name = "glm-mcp-server"
version = "2.0.0"
description = "GLM-4.7 MCP Server - Cost-efficient AI delegation for Claude Code with 87% savings"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GLM MCP Contributors", email = "glm-mcp@example.com"}
]
keywords = ["mcp", "glm", "claude-code", "ai", "llm", "zai", "cost-savings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/glm-mcp-server"
Repository = "https://github.com/yourusername/glm-mcp-server"
Issues = "https://github.com/yourusername/glm-mcp-server/issues"
Documentation = "https://github.com/yourusername/glm-mcp-server/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
glm-mcp = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
